# You must change these to your own details.
[package]
name = "rust-webpack-template"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
async-trait = "0.1.52"
wasm-bindgen = "0.2.78"
futures = "0.3.17"
wasm-bindgen-futures = "0.4.28"
console_error_panic_hook = "0.1.7"
anyhow = "1.0.51"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.55"
features = ["console", "Window", "Document", "HtmlCanvasElement",
            "CanvasRenderingContext2d", "Element", "Performance", "KeyboardEvent"]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.28"
js-sys = "0.3.55"
